src/tests/fixtures/resolver_context/ContextValueMissingTypeAnnotation.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class Query {
  /** @gqlField */
  greeting(args: never, ctx): string {
    return ctx.greeting;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/ContextValueMissingTypeAnnotation.invalid.ts:4:25 - error: Expected context parameter to have a type annotation. Grats validates that your context parameter is type-safe by checking that it references the type declaration annotated with `/** @gqlContext */`.

4   greeting(args: never, ctx): string {
                          ~~~
